fixed another inconsistency in the spacing of the edit profile modal elements; contact names are now displayed based on how they're saved by the contact, rather than how they appear in the users table

--- a/Client/src/components/EditProfile.css
+++ b/Client/src/components/EditProfile.css
@@ -18,8 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    gap: 30px;
+    justify-content: center;
     position: relative;
     height: 80%;
     width: 80%;
@@ -32,32 +31,6 @@
 
     animation-name: modalSlide;
     animation-duration: 0.5s;
-}
-
-#editProfileModal>h2{
-    min-height: 39px;
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
-    color: rgb(80, 80, 80);
-    margin-bottom: -10px;
-}
-
-#editProfileModal>h2:hover{
-    background-color: hsl(210, 13%, 84%);
-}
-
-#editProfileModal>p{
-    font-size: 1.2rem;
-    text-align: center;
-    color: rgb(80, 80, 80);
-    min-height: 34px;
-    width: 90%;
-    margin: 0px;
-}
-
-#editProfileModal>p:hover{
-    background-color: hsl(210, 13%, 84%);
 }
 
 #currentIcon{
@@ -103,21 +76,49 @@
     font-size: 1.4rem;
 }
 
+#editProfileModal>h2{
+    min-height: 39px;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+    color: rgb(80, 80, 80);
+    margin: 7vh 0vw;
+}
+
+#editProfileModal>h2:hover{
+    background-color: hsl(210, 13%, 84%);
+}
+
+#editProfileModal>p{
+    font-size: 1.2rem;
+    text-align: center;
+    color: rgb(80, 80, 80);
+    min-height: 34px;
+    width: 90%;
+    margin-bottom: 5vh;
+}
+
+#editProfileModal>p:hover{
+    background-color: hsl(210, 13%, 84%);
+}
+
 #newUsernameInput{
     display: none;
     height: 38px;
+    max-width: 60vw;
+    margin: 7vh 0vw;
     padding: 5px;
     border: none;
-    margin-bottom: 20px;
     color: rgb(36, 36, 36);
 }
 
 #newStatusInput{
     display: none;
     height: 34px;
+    max-width: 60vw;
     border: none;
     padding: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 5vh;
     color: rgb(36, 36, 36);
     font-size: 1.2rem;
 }
